gcc/testsuite/rust/rustc/ui/error-codes/E0426.rs
fn main () {
    loop {
        break 'a;
// { dg-error ".E0426." "" { target *-*-* } .-1 }
    }
}

